@@ -7,108 +7,86 @@
 进入官网下载地址
 
 * [https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html)
+* 下载最新版本的jdk-xxxx-linux-x64.tar.gz安装包
 
-  
-&lt;!--  
- /\* Font Definitions \*/  
- @font-face  
-	{font-family:宋体;  
-	panose-1:2 1 6 0 3 1 1 1 1 1;  
-	mso-font-alt:SimSun;  
-	mso-font-charset:134;  
-	mso-generic-font-family:auto;  
-	mso-font-pitch:variable;  
-	mso-font-signature:3 680460288 22 0 262145 0;}  
-@font-face  
-	{font-family:"Cambria Math";  
-	panose-1:2 4 5 3 5 4 6 3 2 4;  
-	mso-font-charset:0;  
-	mso-generic-font-family:roman;  
-	mso-font-pitch:variable;  
-	mso-font-signature:3 0 0 0 1 0;}  
-@font-face  
-	{font-family:等线;  
-	panose-1:2 1 6 0 3 1 1 1 1 1;  
-	mso-font-alt:DengXian;  
-	mso-font-charset:134;  
-	mso-generic-font-family:auto;  
-	mso-font-pitch:variable;  
-	mso-font-signature:-1610612033 953122042 22 0 262159 0;}  
-@font-face  
-	{font-family:"DejaVu Sans Mono";  
-	panose-1:2 11 6 9 3 8 4 2 2 4;  
-	mso-font-charset:0;  
-	mso-generic-font-family:modern;  
-	mso-font-pitch:fixed;  
-	mso-font-signature:-436197633 -771687941 33554472 0 479 0;}  
-@font-face  
-	{font-family:"\@宋体";  
-	panose-1:2 1 6 0 3 1 1 1 1 1;  
-	mso-font-charset:134;  
-	mso-generic-font-family:auto;  
-	mso-font-pitch:variable;  
-	mso-font-signature:3 680460288 22 0 262145 0;}  
-@font-face  
-	{font-family:"\@等线";  
-	panose-1:2 1 6 0 3 1 1 1 1 1;  
-	mso-font-charset:134;  
-	mso-generic-font-family:auto;  
-	mso-font-pitch:variable;  
-	mso-font-signature:-1610612033 953122042 22 0 262159 0;}  
- /\* Style Definitions \*/  
- p.MsoNormal, li.MsoNormal, div.MsoNormal  
-	{mso-style-unhide:no;  
-	mso-style-qformat:yes;  
-	mso-style-parent:"";  
-	margin:0cm;  
-	margin-bottom:.0001pt;  
-	text-align:justify;  
-	text-justify:inter-ideograph;  
-	mso-pagination:none;  
-	font-size:10.5pt;  
-	mso-bidi-font-size:11.0pt;  
-	font-family:等线;  
-	mso-ascii-font-family:等线;  
-	mso-ascii-theme-font:minor-latin;  
-	mso-fareast-font-family:等线;  
-	mso-fareast-theme-font:minor-fareast;  
-	mso-hansi-font-family:等线;  
-	mso-hansi-theme-font:minor-latin;  
-	mso-bidi-font-family:"Times New Roman";  
-	mso-bidi-theme-font:minor-bidi;  
-	mso-font-kerning:1.0pt;}  
-code  
-	{mso-style-noshow:yes;  
-	mso-style-priority:99;  
-	mso-ansi-font-size:12.0pt;  
-	mso-bidi-font-size:12.0pt;  
-	font-family:宋体;  
-	mso-ascii-font-family:宋体;  
-	mso-fareast-font-family:宋体;  
-	mso-hansi-font-family:宋体;  
-	mso-bidi-font-family:宋体;}  
-.MsoChpDefault  
-	{mso-style-type:export-only;  
-	mso-default-props:yes;  
-	font-family:等线;  
-	mso-bidi-font-family:"Times New Roman";  
-	mso-bidi-theme-font:minor-bidi;}  
- /\* Page Definitions \*/  
- @page  
-	{mso-page-border-surround-header:no;  
-	mso-page-border-surround-footer:no;}  
-@page WordSection1  
-	{size:612.0pt 792.0pt;  
-	margin:72.0pt 90.0pt 72.0pt 90.0pt;  
-	mso-header-margin:36.0pt;  
-	mso-footer-margin:36.0pt;  
-	mso-paper-source:0;}  
-div.WordSection1  
-	{page:WordSection1;}  
---&gt;  
+### 安装Java
+
+将下载的安装包拷贝到想要安装的目录
+
+```text
+// 解压安装包
+tar -xzvf jdk-8u241-linux-x64.tar.gz
+
+// 修改环境变量
+vim ~/.bashrc
+
+// 在环境变量文件最末添加
+export JAVA_HOME=/home/soft/jdk1.8.0_241
+export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
+export PATH=$JAVA_HOME/bin:$JAVA_HOME/jre/bin:$PATH:$HOME/bin
+
+// 保存退出后生效设置
+source ~/.bashrc
+
+// 查看是否安装成功
+java -version
+```
 
 
-点击`Accept License Agreement`后选择`jdk-8u241-linux-x64.tar.gz`下载\(版本可能更新，选择提供的最新版本\)
+
+## 安装SBT工具
+
+进入官网下载
+
+* [https://www.scala-sbt.org/download.html](https://www.scala-sbt.org/download.html)
+* 下载最新sbt-x.x.x.tgz安装包
+
+将下载的安装包移动到安装java包的目录
+
+```text
+// 解压安装包
+tar zxvf sbt-x.x.x.tgz
+
+// 在安装目录创建sbt文件
+vim sbt
+
+// 在sbt中添加如下代码
+#!/bin/bash
+BT_OPTS="-Xms2048M -Xmx4096M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"
+java $SBT_OPTS -jar /home/soft/sbt/bin/sbt-launch.jar "$@"
+*注意更改/home/soft/为你的安装目录*
+ 
+// 修改sbt文件权限
+chmod u+x sbt
+
+// 配置sbt环境变量
+vim /etc/profile
+*在末尾添加*
+export SBT_HOME=/home/soft/sbt
+export PATH=${SBT_HOME}/bin:$PATH
+*注意更改/home/soft/为你的安装目录*
+
+// 生效配置
+source /etc/profile
+
+// 检测是否安装成功
+sbt -version
+
+```
+
+
+
+## 安装Chisel开发软件
+
+
+
+
+
+
+
+
+
+
 
 
 
